Bug 128717 - Duplex option in print dialog (on Linux) not properly synchronized between both places
Summary: Duplex option in print dialog (on Linux) not properly synchronized between bo...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: All Linux (All)
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:6.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2019-11-11 17:17 UTC by Michael Weghorn
Modified: 2019-11-13 06:33 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
PPD file for sample printer that supports duplex (239.58 KB, text/plain)
2019-11-11 17:17 UTC, Michael Weghorn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Weghorn 2019-11-11 17:17:24 UTC
Created attachment 155712 [details]
PPD file for sample printer that supports duplex

For a printer that supports duplex printing and that is set up with a PPD using the standard "Duplex" PPD option, there are two places where the value for the "Duplex" option can be set and those are not properly synchronized.

Steps to reprooduce:

0) Set up a (dummy) printer that supports duplex printing, e.g. using the attached PPD file:
  sudo lpadmin -p tofile-ricoh -v ipp://printer1.example.org/ipp/print -P tofile-ricoh.ppd -E

1) start Writer
2) open print dialog (Ctrl+P)
3) select the printer set up in step 0
4) observe that "Paper sides" is correctly set to "Print in both sides (long edge)"
5) click on the "Properties" button
6) observe that "Duplex" is set to "Lange Kante" (OK, German translation for "Long edge)"
7) change value for "Duplex" to "Aus" (i.e. "None")
8) click "OK" to close the "Properties" dialog
9) observe the value shown for duplex in the main print dialog

Result:

The value is still "Print in both sides (long edge).

Expected result:

The value should be the same as set in step 7, here "Print only in one side".


Additional notes:
* When printing to an actual printer, the value set in step 7 is used, not the one shown in step 9.
* Synchronization works correctly the other way round, i.e. after changing it in the main print dialog and then opening the "Properties", the previously set value is shown there.
Comment 1 Michael Weghorn 2019-11-11 17:19:15 UTC
Version: 6.4.0.0.alpha1+
Build ID: 45c40f88e2aabfdeb8890ce7dcfd8c9a3d212e23
CPU threads: 4; OS: Linux 5.2; UI render: default; VCL: kf5; 
Locale: en-GB (en_GB.UTF-8); UI-Language: en-US
Calc: threaded

I'm currently looking into this myself.
Comment 2 Commit Notification 2019-11-13 06:28:40 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f166f0cf4f92d1d765d9ae9003d9d725ba120e54

Related tdf#128717:  Drop "<ignore>" value for duplex and paper tray

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2019-11-13 06:28:49 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/eeae2032476e8c8645ab438fbb379f3151c8e472

tdf#128717 Sync duplex value from "Properties" dialog

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.