Related tdf#128717:  Drop "<ignore>" value for duplex and paper tray

Drop the artificial extra value "<ignore>" for the duplex and paper tray
options in the "Properties..." dialog used in the print dialog on Linux.

Those extra values were introduced in commit
a9f8d75e6c54b40845fc198019788ff6b568aaf5
("Administration utility for Unix PS-Print Environment") in 2001.

The two corresponding comboboxes are greyed out if there are no PPD
options "Duplex" and/or "InputSlot". And if there are valid values
for these options, one of those is preselected.

I see no use in allowing to explicitly setting the value to "<ignore>".
Not passing any value explicitly to CUPS will cause the default option
to be used anyway.

Having an additional option for Duplex is also inconsistent with the
(revamped) main print dialog, where that additional value is not
offered for the duplex option, i.e. the "Properties" dialog offers
more choices than the main print dialog.

Change-Id: Id9d20a061e51921e601d53d74aa8079fe3c59aca