vcl/unx/generic/print/prtsetup.hxx
@@ -35,8 +35,6 @@ class RTSDialog : public weld::GenericDialogController
 
     ::psp::PrinterInfo      m_aJobData;
 
-    // some resources
-    OUString const          m_aInvalidString;
     bool m_bDataModified;
 
     // controls
